infra/VirtualNetwork/deploy.vnet.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
                "description": "Specifies the location for all resources."
            }
        },
        "vnetName": {
            "type": "string",
            "metadata": {
                "description": "Specifies the name of the vnet that gets created."
            }
        }
    },
    "variables": {
        "location": "[parameters('location')]",
        "vnetName": "[parameters('vnetName')]"
    },
    "resources": [
        {
            "name": "mlflow-nsg",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-11-01",
            "location": "[variables('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowRDP",
                        "properties": {
                            "access": "Allow",
                            "direction": "Inbound",
                            "priority": 1000,
                            "protocol": "Tcp",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "3389"
                        }
                    },
                    {
                        "name": "AllowSSH",
                        "properties": {
                            "access": "Allow",
                            "direction": "Inbound",
                            "priority": 1010,
                            "protocol": "Tcp",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "22"                            
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('vnetName')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2020-04-01",
            "location": "[variables('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', 'mlflow-nsg')]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.1.0.0/27"
                    ]
                },
                "subnets": [
                    {
                        "name": "mlflow-app-service",
                        "properties": {
                            "addressPrefix": "10.1.0.0/28",
                            "privateEndpointNetworkPolicies": "Enabled",
                            "privateLinkServiceNetworkPolicies": "Enabled",
                            "delegations": [
                                {
                                    "name": "webapp",
                                    "properties": {
                                        "serviceName": "Microsoft.Web/serverFarms"
                                    }
                                }
                            ]
                        }
                    },
                    {
                        "name": "mlflow-subnet",
                        "properties": {
                            "addressPrefix": "10.1.0.16/29",
                            "privateEndpointNetworkPolicies": "Enabled",
                            "privateLinkServiceNetworkPolicies": "Enabled",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'mlflow-nsg')]"
                            }
                        }
                    },
                    {
                        "name": "mlflow-privatelink-subnet",
                        "properties": {
                            "addressPrefix": "10.1.0.24/29",
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Enabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    }
                ]
            }
        }
    ],
    "outputs": {}
}
